--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-flask==2.0.1
-torch==2.2.1
-torchvision==0.17.1
-pillow==8.3.1
-numpy==2.2.5
-werkzeug==2.0.1 
+torch~=2.7.0+cu128
+torchvision~=0.22.0+cu128
+Flask~=3.1.1
+Werkzeug~=3.1.3
+pillow~=11.0.0
+matplotlib~=3.10.3
+numpy~=2.1.2
